--- a/en/bmc_article.bib
+++ b/en/bmc_article.bib
@@ -1,3 +1,19 @@
+@article{Abadi2012,
+  title={Consistency tradeoffs in modern distributed database system design: CAP is only part of the story},
+  author={Abadi, Daniel J},
+  journal={Computer},
+  number={2},
+  pages={37--42},
+  year={2012},
+  publisher={IEEE}
+}
+@article{Adve1995,
+author = {Adve, Sarita V and Gharachorloo, Kourosh},
+file = {:home/mdediana/Documents/ref/Adve, Gharachorloo - 1995 - Shared Memory Consistency Models A Tutorial(2).pdf:pdf},
+journal = {Computer Engineering},
+title = {{Shared Memory Consistency Models: A Tutorial}},
+year = {1995}
+}
 @article{Atikoglu2012,
  author = {Atikoglu, Berk and Xu, Yuehai and Frachtenberg, Eitan and Jiang, Song
 and Paleczny, Mike},
@@ -39,6 +55,13 @@ and Paleczny, Mike},
  booktitle = {Proc. 2nd International Conference on Cloud
 Computing, GRIDs, and Virtualization},
  pages = {86-91}
+}
+@article{Brewer2000,
+author = {Brewer, Eric A.},
+journal = {Annual ACM Symposium on Principles of Distributed Computing},
+title = {{Towards Robust Distributed Systems}},
+url = {http://portal.acm.org/citation.cfm?id=343502},
+year = {2000}
 }
 @inproceedings{Calder2011,
  author = {Calder, Brad and Wang, Ju and Ogus, Aaron and Nilakantan, Niranjan
@@ -125,6 +148,19 @@ Sivasubramanian, Swaminathan and Vosshall, Peter and Vogels, Werner},
  howpublished = {\url{http://fasterdata.es.net/host-tuning/background/}},
  year = {2012},
 }
+@article{Gilbert2002,
+author = {Gilbert, Seth and Lynch, Nancy},
+doi = {10.1145/564585.564601},
+file = {:home/mdediana/Documents/ref/Gilbert, Lynch - 2002 - Brewer's Conjecture and the Feasibility of Consistent, Available, Partition-tolerant Web Services.pdf:pdf},
+issn = {01635700},
+journal = {ACM SIGACT News},
+number = {2},
+pages = {51},
+title = {{Brewer's Conjecture and the Feasibility of Consistent, Available, Partition-tolerant Web Services}},
+url = {http://portal.acm.org/citation.cfm?doid=564585.564601},
+volume = {33},
+year = {2002}
+}
 @inproceedings{Glendenning2011,
  author = {Glendenning, Lisa and Beschastnikh, Ivan and Krishnamurthy, Arvind
 and Anderson, Thomas},
@@ -192,6 +228,19 @@ storage with COPS},
  acmid = {2043593},
  keywords = {ALPS systems, causal + consistency, key-value storage, read
 transactions, scalable wide-area replication},
+}
+@article{Mosberger1993,
+author = {Mosberger, David},
+doi = {10.1145/160551.160553},
+file = {:home/mdediana/Documents/ref/Mosberger - 1993 - Memory consistency models.pdf:pdf},
+issn = {01635980},
+journal = {ACM SIGOPS Operating Systems Review},
+number = {1},
+pages = {18--26},
+title = {{Memory consistency models}},
+url = {http://portal.acm.org/citation.cfm?doid=160551.160553},
+volume = {27},
+year = {1993}
 }
 @misc{PingER2013,
  author = {PingER},
